--- a/index.html
+++ b/index.html
@@ -1,13 +1,203 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 4</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+<head>  
+  <meta charset="utf-8" />
+  <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+  <title>ЛР_4</title>
+  <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
+  <script src="https://www.x3dom.org/download/x3dom.js"></script>
+</head>
+<body>
+  <h1>Поехали!</h1>
+  <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom" style="width:1025px; height:768px">
+    <Scene>
+
+      
+
+      <group def="ground">
+        <transform translation='0 0 0'>
+          <Shape>
+            <Appearance>
+              <ImageTexture url=".\concrete.jpg"> </ImageTexture>
+            </Appearance>
+            <Box size='200 2 200' > </Box>  
+          </Shape>
+        </transform>
+        <transform translation='10 0 0'>
+          <transform translation='0 2 0'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="brown"></Material>
+              </Appearance>
+              <Box size='20 2.25 10' > </Box>  
+            </Shape>
+          </transform>
+          <transform translation='6 12 0'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="brown"></Material>
+              </Appearance>
+              <Box size='3 20 3' > </Box>  
+            </Shape>
+          </transform>
+        </transform>
+      </group>
+
+      <group def="rocket">
+        <transform translation='10 0 0' DEF='launch'>
+          <transform translation='0 22 0'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="white"></Material>
+              </Appearance>
+              <Cone size="20 40"></Cone>
+            </Shape>
+          </transform>
+          <transform translation='0 12.5 0'>
+            <Shape>
+              <Appearance>
+                <ImageTexture url=".\spaceshiptext.png"> </ImageTexture>
+              </Appearance>
+              <Cylinder height='17' radius='1'> </Cylinder>
+            </Shape>
+          </transform>
+          <transform translation='0 4 0'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="black"></Material>
+              </Appearance>
+              <Cone size="20 40"></Cone>
+            </Shape>
+          </transform>
+          <transform translation='0 18 0' rotation='1 0 0 -1.414'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="black"></Material>
+              </Appearance>
+              <Torus innerradius='0.5' outerradius='0.6'> </Torus>
+            </Shape>
+          </transform>
+          <transform translation='0 10 0' rotation='1 0 0 -1.414'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="black"></Material>
+              </Appearance>
+              <Torus innerradius='0.5' outerradius='0.6'> </Torus>  
+            </Shape>
+          </transform>
+          <transform translation='0 19 0'>
+            <Shape>
+              <Appearance>
+                <Material diffuseColor="yellow"></Material>
+              </Appearance>
+              <Box size='4 0.2 0.05' > </Box>  
+            </Shape>
+          </transform>
+          <!--1 ускоритель-->
+          <transform translation='-1 15 0'>
+            <Shape>
+              <Appearance>
+               <ImageTexture url=".\spaceshiptext.png"> </ImageTexture>
+             </Appearance>
+             <Cylinder height='5' radius='0.2'> </Cylinder>
+            </Shape>
+          </transform>
+          <transform translation='-1.5 17.5 0'>
+           <Shape>
+            <Appearance>
+              <Material diffuseColor="white"></Material>
+            </Appearance>
+            <Cone height='2' bottomradius='0.5'></Cone>
+          </Shape>
+        </transform>
+        <transform translation='-1.5 10 0'>
+          <Shape>
+            <Appearance>
+             <ImageTexture url=".\spaceshiptext.png"> </ImageTexture>
+           </Appearance>
+           <Cylinder height='13' radius='0.5'> </Cylinder>
+         </Shape>
+       </transform>
+       <transform translation='-1.5 4 0'>
+        <Shape>
+          <Appearance>
+            <Material diffuseColor="black"></Material>
+          </Appearance>
+          <Cone height='2' bottomradius='0.5'></Cone>
+        </Shape>
+      </transform>
+      <!--2 ускоритель-->
+      <transform translation='1 15 0'>
+        <Shape>
+          <Appearance>
+           <ImageTexture url=".\spaceshiptext.png"> </ImageTexture>
+         </Appearance>
+         <Cylinder height='5' radius='0.2'> </Cylinder>
+       </Shape>
+     </transform>  
+     <transform translation='1.5 17.5 0'>
+      <Shape>
+        <Appearance>
+          <Material diffuseColor="white"></Material>
+        </Appearance>
+        <Cone height='2' bottomradius='0.5'></Cone>
+      </Shape>
+    </transform>
+    <transform translation='1.5 10 0'>
+      <Shape>
+        <Appearance>
+         <ImageTexture url=".\spaceshiptext.png"> </ImageTexture>
+       </Appearance>
+       <Cylinder height='13' radius='0.5'> </Cylinder>
+     </Shape>
+   </transform>
+   <transform translation='1.5 4 0'>
+    <Shape>
+      <Appearance>
+        <Material diffuseColor="black"></Material>
+      </Appearance>
+      <Cone height='2' bottomradius='0.5'></Cone>
+    </Shape>
+  </transform>
+</transform>
+</group>
+
+    
+    <Background groundAngle='0.9 1.5 1.57' groundColor='0.6 0.3 0.1 0.2 0.1 0.2 0.1 0.6 0.1 0 0.3 0.1' skyAngle='0.9 1.5 1.57' skyColor='0.28 0.18 0.36 0.2 0.44 0.85 0.51 0.81 0.95 0.47 0.8 0.2'></Background>
+    <PointLight location="0 50 0" color="0 0 1" intensity="2" shadowIntensity="0.5" shadowMapSize="512"></PointLight>
+    <SpotLight ambientIntensity='0' attenuation='1,0,0' beamWidth='1.5707963' color='1,1,1' cutOffAngle='1.5707963' direction='0,0,-1'  intensity='1' location='-40 10 10' radius='100'> 
+    </SpotLight>
+    <Fog visibilityRange='200' fogType='EXPONENTIAL'></Fog>
+
+    <Viewpoint def="camera"></Viewpoint>
+
+   <timeSensor DEF="time" cycleInterval="20" loop="true" enabled="true"> 
+   </timeSensor>
+
+   <OrientationInterpolator DEF="angle"
+   key="0 0.3 0.5 0.8 1" 
+   keyValue="0 0 0 0, 0 0 0 0, 1 0 0 -0.707, 1 0 0 -1.414, 1 0 0 -1.414"
+   ></OrientationInterpolator> 
+   
+   <PositionInterpolator DEF="force" 
+   key="0 0.05 0.1 0.3 0.5 0.7 0.9 1" 
+   keyValue="10 0 0, 10 0 0, 10 30 0, 10 125 0, 10 175 -20, 10 225 -50, 10 225 -100, 10 225 -150"> 
+   </PositionInterpolator> 
+
+  <PositionInterpolator DEF="view" 
+   key="0 0.05 0.1 0.3 0.5 0.7 0.9 1" 
+   keyValue="10 15 50, 10 15 50, 10 40 50, 10 135 50, 10 185 30, 10 235 0, 10 235 -50, 10 235 -100"> 
+   </PositionInterpolator> 
+
+   <Route fromNode="time" fromField ="fraction_changed" toNode="force" toField="set_fraction"> </Route>
+   <Route fromNode="time" fromField ="fraction_changed" toNode="view" toField="set_fraction"> </Route>
+   <Route fromNode="time" fromField ="fraction_changed" toNode="angle" toField="set_fraction"> </Route> 
+
+
+   <Route fromNode="force" fromField ="value_changed" toNode="launch" toField="translation"> </Route> 
+   <Route fromNode="view" fromField ="value_changed" toNode="camera" toField="position"> </Route>
+   <Route fromNode="angle" fromField ="value_changed" toNode="launch" toField="set_rotation"> </Route> 
+</Scene>
+</X3D>
+</body> 
 </html>
