--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </Transform>
         <!--самолетик бумажный с гиперссылкой-->
         <Anchor url = "https://github.com/johuex">
-          <Transform translation = "0 0 -5" rotation = "1 0 0 0.57">
+          <Transform translation = "10 0 0" rotation = "0 1 0 0.78" DEF = 'fly'>
             <Shape>
               <IndexedTriangleSet index=" 0 1 2  0 1 3  0 2 5  0 3 4 " solid = "false">
                 <Coordinate point =" 0 0 0, 3 0 0, 3 1 -.5, 3 1 .5, 3 1 2.5, 3 1 -2.5 "></Coordinate>
@@ -172,6 +172,31 @@
             </Shape>
           </Transform>
         </Anchor>
+		
+		<!--описание таймера-->
+		<timeSensor DEF="time" cycleInterval="5" loop="true" enabled="true">
+		</timeSensor>
+		
+		<OrientationInterpolator DEF="rotate"
+			key="0 0.125 0.25 0.375 0.5 0.625 0.75 0.875 1" 
+			keyValue="0 1 0 0.78, 0 1 0 1.57, 0 1 0 2.35, 0 1 0 3.14, 0 1 0 3.92, 0 1 0 4.71, 0 1 0 5.49, 0 1 0 6.1, 0 1 0 6.4"
+		></OrientationInterpolator> 
+   
+		<PositionInterpolator DEF="moving" 
+			key="0 0.125 0.25 0.375 0.5 0.625 0.75 0.875 1" 
+			keyValue="0 0 -5, -2.5 0 -2.5, -5 0 0, -2.5 0 2.5, 0 0 5, 2.5 0 2.5, 5 0 0, 2.5 0 -2.5, 0 0 -5 "> 
+		</PositionInterpolator> 
+		
+		<Route fromNode="time" fromField ="fraction_changed" toNode="rotate" toField="set_fraction">
+		</Route>
+		<Route fromNode="time" fromField ="fraction_changed" toNode="moving" toField="set_fraction">
+		</Route>
+		
+		<Route fromNode="rotate" fromField ="value_changed" toNode="fly" toField="set_rotation">
+		</Route>
+		<Route fromNode="moving" fromField ="value_changed" toNode="fly" toField="translation">
+		</Route>
+		
         <Background DEF='Summer'
           skyAngle='0.8,
                     1.3,
