--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         <TimeSensor DEF="Time" cycleInterval='1' loop='true'></TimeSensor>
         
         <ScalarInterpolator DEF='ScInt' key='0 .1 .2 .21 1' keyValue='1 1 .9 0 0'></ScalarInterpolator>
-        <ScalarInterpolator DEF='ScInt2' key='0 .2 .21 1' keyValue='.3 .3 0 0'></ScalarInterpolator>
+        <ScalarInterpolator DEF='ScInt2' key='0 .05 1' keyValue='.1 0 0'></ScalarInterpolator>
 
         <OrientationInterpolator DEF='OrientInt' key='0 0.2 0.5 1' keyValue='0 0 1 0 0 0 1 0 0 0 1 -0.05 0 0 1 0'></OrientationInterpolator>
         <OrientationInterpolator DEF='OrientInt2' key='0 0.2 0.3 1' keyValue='0 0 1 0 0 0 1 -0.05 0 0 1 0 0 0 1 0'></OrientationInterpolator>
