--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<transform  translation = "5.8 0 -0.9" scale = "1 2 5">
 					<Shape USE = "Blade"></Shape>
 				</transform>
-				</Transform>
+				</transform>
 				
 				<!-- Вращение лопастей -->
 				 <TimeSensor DEF='time_propeller' cycleInterval="3" loop='true' enabled='true'></TimeSensor>
