--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				  <Dish radius="5.5" diameter="3.4" height = "2"></Dish> 
 				</Shape>
 				</transform>
+				</Transform>
 			<!-- окна -->
 				<transform translation = "0 0 1.29" rotation = "1 0 0 1.57">
 				<!-- 1 -->
