--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<transform translation="0 -2.15 0" rotation="1 0 0 -0.4">
 									<group DEF="full_foot">
 										<transform rotation="0 0 1 1.57">
-											<shape DEF="roller">
+											<shape DEF="joint">
 												<appearance>
 													<material diffusecolor="gray"></material>
 												</appearance>
@@ -135,6 +135,21 @@
 												</appearance>
 												<pyramid height="0.4" xbottom="0.8" ybottom="1" xtop="0.4" ytop="0.5" xoff="0" yoff="0"></pyramid>
 											</shape>
+										</transform>
+										
+										<transform translation="0 -0.6 0" rotation="0 0 1 1.57">
+											<transform translation="0 0 0.2">
+												<shape DEF="roller">
+													<appearance>
+														<material diffusecolor="#040404"></material>
+													</appearance>
+													<cylinder height="0.3" radius="0.2"></cylinder>
+												</shape>
+											</transform>
+											
+											<transform translation="0 0 -0.2">
+												<shape USE="roller"></shape>
+											</transform>
 										</transform>
 									</group>
 								</transform>
