--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 		<Scene>
 			<!--Background-->
 			<Background groundAngle='1 1.5 1.57' groundColor='.8 .8 .8 .7 .7 .7 .6 .6 .6 .6 .6 .6 .6 .5 .5' skyAngle='1 1.5 1.57' skyColor='.7 .7 .7 .85 .84 .85 .81 .81 .95 .77 .8 .82'></Background>
-        	<!--Viewpoint-->
+        		<!--Viewpoint-->
 			<Viewpoint 	position="7 1 19" orientation="0 .2 0 .4"></Viewpoint>
-			<!--Light-->
-			<Spotlight color='white' location='-3 15 -2' direction='2 0 0'></Spotlight>
+			<Viewpoint 	position="0 1 25"></Viewpoint>
+			<Viewpoint 	position="-9 1 19" orientation="0 .2 0 -.4"></Viewpoint>
+			<!--Navigation-->
+			<NavigationInfo type='ANIMATE' speed="3" headlight = "false"></NavigationInfo>
+			<!--Lights-->
+			<Spotlight color='white' location='5 3 4' direction='-2 -1 -2'></Spotlight>
+			<PointLight color='violet' location='0 5.5 2' ></PointLight>
 			<!--Fog-->
 			<Fog fogType="EXPONENTIAL" color="#FFFFFF" visibilityRange='125'></Fog>
 			<!--Body-->
@@ -269,7 +274,7 @@
 			</Transform>
 			<!--Heart-->
 			<Anchor url="https://youtu.be/X3IA6pIVank" parameter="target='_self'">
-			<Transform DEF = 'Heart' translation="0 5 0">
+			<Transform DEF = 'Heart' translation="0 5 0" center = "0.4 0 0">
 				<Shape>
 				  <Appearance>
 					<Material DEF = 'HeartMat' emissiveColor ='gold' ></Material>
@@ -334,13 +339,14 @@
 				</ROUTE>
 				<ROUTE fromNode='OrInt2' fromField='value_changed' 
 					   toNode='Arm2' toField='set_rotation'>
-				</ROUTE>				
-				<PositionInterpolator DEF='PosInt' key='0, 0.5, 1' keyValue='0 4.7 0 , 0 5.3 0, 0 4.7 0'></PositionInterpolator>
-				<ROUTE fromNode='TS_Arm' fromField='fraction_changed' 
+				</ROUTE>		
+			<TimeSensor DEF='TS_Heartbeat' cycleInterval='0.65' loop='true'></TimeSensor>		
+				<PositionInterpolator DEF='PosInt' key='0, 0.33, 0.66, 1' keyValue='1 1 1, 1 1 1, 1.3 1.3 1.3, 1 1 1'></PositionInterpolator >
+				<ROUTE fromNode='TS_Heartbeat' fromField='fraction_changed' 
 					   toNode='PosInt' toField='set_fraction'>
 				</ROUTE>
 				<ROUTE fromNode='PosInt' fromField='value_changed' 
-					   toNode='Heart' toField='set_translation'>
+					   toNode='Heart' toField='set_scale'>
 				</ROUTE>
 			<TimeSensor DEF='TS_Head' cycleInterval='2' loop='true'></TimeSensor>
 				<OrientationInterpolator DEF='OrInt3' key='0, 0.5, 1' keyValue='0 1 0 0, 0 1 0 3.14, 0 1 0 6.28'></OrientationInterpolator>
