--- a/index.html
+++ b/index.html
@@ -6,8 +6,285 @@
     <title>Лабораторная работа 4</title>
     <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
     <script src="https://www.x3dom.org/download/x3dom.js"></script>
+
+    <link rel="stylesheet" href="https://www.x3dom.org/download/dev/x3dom.css" />
+    <script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script>
+    <link rel="stylesheet" href="../css/custom.css" />
+    <script src="../js/custom.js"></script>
+
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
+    <h2 style="color:#F0F8FF; font-family:CENTURY GOTHIC;">Philippov Ivan group:4741</h2>
+    <style>
+  		body { background: url(https://i.imgur.com/zz8z6OF.jpg); }
+	</style>
+      <X3D width='1400px' height='860px'>
+        <scene> 
+          <background bottomUrl="https://i.imgur.com/8izW4o3.png"
+          topUrl="https://i.imgur.com/xVwHKTI.png"
+  		  backUrl="https://i.imgur.com/BuVXCNr.png"            
+          frontUrl="https://i.imgur.com/yGA653W.png" 
+          leftUrl="https://i.imgur.com/ucHG7Ls.png" 
+          rightUrl="https://i.imgur.com/bohATat.png">
+      	  </background>
+          <viewpoint position='15 8 60' orientation='1,-1.5,0,-.2'></viewpoint>
+          <TimeSensor DEF="Time2" cycleInterval="1" loop="true" enabled="true"></TimeSensor>
+          <TimeSensor DEF="Time" cycleInterval="3" loop="true" enabled="true"></TimeSensor>
+ 		  <PositionInterpolator DEF="PosInt_ball" key="0 .2 .25 .3 .7 .75 .8 1"
+ 		  keyValue="0 -6.5 1.3, 0 -6.5 -10.2, 0 -6.5 -10.7, 0 -6.5 -10.2, 0 -6.5 12.8, 
+ 		  0 -6.5 13.3, 0 -6.5 12.8, 0 -6.5 1.3"></PositionInterpolator>
+ 		  <PositionInterpolator DEF="PosInt_peepo" key="0 .2 .25 .3 .7 .75 .8 1"
+ 		  keyValue="0 0 0, 0 -.1 -11.5, 0 -.1 -12, 0 -.1 -11.5,, 0 -.1 11.5 0 0 12,
+ 		  0 -.1 11.5, 0 0 0"></PositionInterpolator>
+ 		  <OrientationInterpolator DEF="OrientInt_ball" key="0 .25 .5 .75 1"
+ 		  keyValue="1 .2 -.1 0, 1 .2 -.1 -3.1, 1 .2 -.1 0, 1 .2 -.1 3.1, 1 .2 -.1 0"></OrientationInterpolator>
+ 		  <OrientationInterpolator DEF="OrientInt_leg1" key="0 .25 .5 .75 1"
+ 		  keyValue="1 -.5 0 0, 1 -.5 0 1.2, 1 -.5 0 0, 1 -.5 0 1.2, 1 -.5 0 0"></OrientationInterpolator>
+ 		  <OrientationInterpolator DEF="OrientInt_leg2" key="0 .25 .5 .75 1"
+ 		  keyValue="1 -.1 0 1.2, 1 -.1 0 0, 1 -.1 0 1.2, 1 -.1 0 0, 1 -.1 0 1.2"></OrientationInterpolator>
+
+	<!--------------------------------------------peepo------------------------------------------------>
+		<transform DEF="peepo">
+          <!--------------------------------------------голова------------------------------------------------>
+          <transform scale='.9 .9 .8' translation='0 0 0'> 
+            <shape> 
+              <appearance> 
+                <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture> 
+                <texturetransform rotation='.1'></texturetransform>
+              </appearance> 
+              <sphere radius=2></sphere> 
+            </shape> 
+          </transform>
+          <transform scale='1 .8 1' translation='0 .5 .15'> 
+            <shape> 
+              <appearance> 
+                <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture>
+              </appearance> 
+              <sphere radius=1.6></sphere> 
+            </shape> 
+          </transform>
+
+          <!--------------------------------------------глазницы------------------------------------------------>
+          <transform scale='1 1 .8' translation='.5 1.1 .7'> 
+            <shape DEF="glazn"> 
+              <appearance> 
+                <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture>
+              </appearance> 
+              <sphere radius=.9></sphere> 
+            </shape> 
+          </transform>
+
+          <transform scale='1 1 .8' translation='-.5 1.1 .7'> 
+            <shape USE="glazn"></shape> 
+          </transform>
+
+          <!--------------------------------------------глаза------------------------------------------------>
+          <transform scale='1 .9 1' translation='-.5 1.3 1.3'> 
+            <shape DEF="glaz">
+              <appearance> 
+                <imagetexture  url='https://i.imgur.com/SM1f9bo.png'></imagetexture>
+              </appearance> 
+              <sphere radius=.55></sphere> 
+            </shape> 
+          </transform>
+
+          <transform scale='1 .9 1' translation='.5 1.3 1.3'> 
+            <shape USE="glaz"></shape> 
+          </transform>
+
+          <!--------------------------------------------рот------------------------------------------------>
+          <transform rotation='1 0 0 2.2' scale='1.15 1 1' translation='0 1 .9'> 
+            <shape DEF="guba"> 
+              <appearance>
+                <material diffuseColor='.4 .03 0'></material> 
+              </appearance> 
+              <torus innerRadius=.1 outerRadius=1></torus> 
+            </shape> 
+          </transform>
+
+          <transform rotation='1 0 0 2.2' scale='1.15 1 1' translation='0 .9 .9'> 
+            <shape USE="guba"></shape> 
+          </transform>
+
+          <!--------------------------------------------нос------------------------------------------------>          
+           <transform translation='0 .8 1.9'> 
+            <shape> 
+              <appearance> 
+                <material diffuseColor='1 0 0'></material>
+              </appearance> 
+              <sphere radius=.3></sphere> 
+            </shape> 
+          </transform>
+
+          <!--------------------------------------------парик------------------------------------------------>
+          <transform rotation='1 0 0 -1.85' scale='1 .7 .8' translation='0 1.2 -.1'> 
+            <shape> 
+              <appearance> 
+              	<imagetexture  url='https://i.imgur.com/RAgjuVU.png'></imagetexture>
+              </appearance> 
+              <sphere radius=2></sphere> 
+            </shape> 
+          </transform>
+
+          <!--------------------------------------------тело------------------------------------------------>
+          <transform rotation='1 0 0 -.5' scale='.9 .8 .8' translation='0 -1 .2'> 
+            <shape> 
+              <appearance> 
+                <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
+              </appearance> 
+              <sphere radius=2.2></sphere> 
+            </shape> 
+          </transform>
+
+          <!--------------------------------------------бант------------------------------------------------>
+          <transform rotation='1 0 0 -.5' scale='.25 .25 .25' translation='0 -.2 1.5'> 
+            <shape> 
+              <appearance> 
+              	<imagetexture  url='https://i.imgur.com/AVw7ykv.jpg'></imagetexture>
+              </appearance> 
+              <IndexedTriangleSet index="0 1 2 3 4 5" solid="false">
+ 				<Coordinate point="-2 1 1, -2 -1 1, 1 0 1, -1 0 1, 2 1 1, 2 -1 1">
+			  </IndexedTriangleSet>
+            </shape> 
+          </transform>
+
+          <transform translation='0 -.1 1.7'> 
+            <shape> 
+              <appearance> 
+              	<imagetexture  url='https://i.imgur.com/AVw7ykv.jpg'></imagetexture>
+              </appearance>
+              <sphere radius=.15></sphere> 
+            </shape> 
+          </transform>
+
+          <!--------------------------------------------ноги------------------------------------------------>
+          <transform DEF="leg1" center='-1 -2.2 1.4'>
+          	<transform DEF="leg">
+		      <transform rotation='1 0 0 -1.2' translation='-1 -2.4 1.22'>
+		        <shape>
+		          <appearance> 
+		            <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
+		          </appearance>  
+		          <cylinder height='1.6' radius='.3'></cylinder>
+		        </shape>
+		      </transform>
+
+		      <transform translation='-1 -2.7 2'>
+		        <shape>
+		          <appearance> 
+		            <imagetexture  url='https://i.imgur.com/DAyPFM7.jpg'></imagetexture>
+		          </appearance>  
+		          <sphere radius=.3></sphere>
+		        </shape>
+		      </transform>
+
+		      <transform rotation='1 0 0 0' translation='-1 -3.3 2'>
+		        <shape>
+		          <appearance> 
+		            <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
+		          </appearance>  
+		          <cylinder height='1.2' radius='.27'></cylinder>
+		        </shape>
+		      </transform>
+
+		      <transform scale='.8 .5 1' rotation='1 0 0 0' translation='-1 -3.7 2.2'> 
+            	<shape> 
+	              <appearance> 
+	                <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
+	              </appearance> 
+	              <sphere radius=0.6></sphere> 
+	            </shape> 
+	          </transform>
+	      </transform>
+	  </transform> 
+
+
+	      <transform DEF="leg2" translation='2 0 .12' rotation='1 0 0 1.2' center='2 -2.2 1.4'>
+	      	<shape USE="leg"></shape> 
+	      </transform>
+
+	      <ROUTE fromNode="Time2" fromField="fraction_changed"
+ 		  toNode="OrientInt_leg1" toField="set_fraction"></ROUTE>
+ 		  <ROUTE fromNode="Time2" fromField="fraction_changed"
+ 		  toNode="OrientInt_leg2" toField="set_fraction"></ROUTE>
+ 		  <ROUTE fromNode="OrientInt_leg1" fromField="value_changed"
+ 		  toNode="leg1" toField="set_rotation"></ROUTE>
+ 		  <ROUTE fromNode="OrientInt_leg2" fromField="value_changed"
+ 		  toNode="leg2" toField="set_rotation"></ROUTE>
+
+
+	    </transform> <!--all peepo-->
+
+	    <ROUTE fromNode="Time" fromField="fraction_changed"
+ 		 toNode="PosInt_peepo" toField="set_fraction"></ROUTE>
+ 		 <ROUTE fromNode="PosInt_peepo" fromField="value_changed"
+ 		 toNode="peepo" toField="set_translation"></ROUTE>
+
+	<!--------------------------------------------мяч------------------------------------------------>
+		<Anchor url="https://youtu.be/e-6eWEhjMa4" parameter="target='_self'">
+          <transform DEF="ball" rotation='1 0 0 .5' translation='0 -6.5 1.3'> 
+            <shape> 
+              <appearance> 
+              	<imagetexture  url='https://i.imgur.com/8Cf1BGY.png'></imagetexture>
+              </appearance>
+              <sphere radius=2.7></sphere> 
+            </shape> 
+          </transform>
+      	</Anchor>
+
+          <ROUTE fromNode="Time" fromField="fraction_changed"
+ 		  toNode="PosInt_ball" toField="set_fraction"></ROUTE>
+ 		  <ROUTE fromNode="PosInt_ball" fromField="value_changed"
+ 		  toNode="ball" toField="set_translation"></ROUTE>
+ 		  <ROUTE fromNode="Time" fromField="fraction_changed"
+ 		  toNode="OrientInt_ball" toField="set_fraction"></ROUTE>
+ 		  <ROUTE fromNode="OrientInt_ball" fromField="value_changed"
+ 		  toNode="ball" toField="set_rotation"></ROUTE>
+
+	<!--------------------------------------------пол------------------------------------------------>
+		 <Group DEF="pol">
+          <transform translation='0 -9.2 0'> 
+            <shape DEF="line"> 
+              <IndexedLineSet coordIndex='0 1 2 3 0 –1'>
+ 				<coordinate point='20 0 20, 20 0 -20, -20 0 -20, -20 0 20'></coordinate>
+ 				<color color='0 0 1, 0 1 0, 0 1 1, 1 0 0, 1 0 1, 1 1 0, 1 1 1'></color>
+			  </IndexedLineSet> 
+            </shape> 
+          </transform>
+
+          <transform translation='0 -9.7 0'> 
+            <shape USE="line"></shape> 
+          </transform>
+
+          <transform translation='0 -10.2 0'> 
+            <shape USE="line"></shape>
+          </transform>
+
+          <transform translation='0 -9.2 0'> 
+            <shape>
+              <appearance> 
+		      	<material transparency=.5></material>
+		      </appearance> 
+              <IndexedFaceSet ccw="true" colorPerVertex="true" convex="true"
+			  creaseAngle="0" solid="false" coordIndex="0 1 2 3">
+			  	<coordinate point="20 0 20, 20 0 -20, -20 0 -20, -20 0 20"></coordinate>
+			  	<color color="0 0 1, 0 1 0, 0 1 1, 1 0 0, 1 0 1, 1 1 0, 1 1 1"></color>
+			  </IndexedFaceSet>
+            </shape> 
+          </transform>
+         </Group>   
+
+	<!-------------------------------------------------------------------------------------------->
+          <navigationInfo avatarSize='0.25, 10, 1' headlight='true' speed='3.0' type="ANY"></navigationInfo>
+          <collision enabled='true'></collision>
+
+          <fog color='(0,0,0)' fogType='"EXPONENTIAL"' visibilityRange='400' ></fog>
+
+          <PointLight color='1 0 0' location='0 8 0' intensity='.8'/>
+
+        </scene> 
+      </x3d> 
+
+
   </body> 
 </html>
