--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture> 
                 <texturetransform rotation='.1'></texturetransform>
               </appearance> 
-              <sphere radius=2></sphere> 
+              <sphere radius='2'></sphere> 
             </shape> 
           </transform>
           <transform scale='1 .8 1' translation='0 .5 .15'> 
@@ -60,7 +60,7 @@
               <appearance> 
                 <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture>
               </appearance> 
-              <sphere radius=1.6></sphere> 
+              <sphere radius='1.6'></sphere> 
             </shape> 
           </transform>
 
@@ -70,7 +70,7 @@
               <appearance> 
                 <imagetexture  url='https://i.imgur.com/lTru2CF.png'></imagetexture>
               </appearance> 
-              <sphere radius=.9></sphere> 
+              <sphere radius='.9'></sphere> 
             </shape> 
           </transform>
 
@@ -84,7 +84,7 @@
               <appearance> 
                 <imagetexture  url='https://i.imgur.com/SM1f9bo.png'></imagetexture>
               </appearance> 
-              <sphere radius=.55></sphere> 
+              <sphere radius='.55'></sphere> 
             </shape> 
           </transform>
 
@@ -98,7 +98,7 @@
               <appearance>
                 <material diffuseColor='.4 .03 0'></material> 
               </appearance> 
-              <torus innerRadius=.1 outerRadius=1></torus> 
+              <torus innerRadius='.1' outerRadius='1'></torus> 
             </shape> 
           </transform>
 
@@ -112,7 +112,7 @@
               <appearance> 
                 <material diffuseColor='1 0 0'></material>
               </appearance> 
-              <sphere radius=.3></sphere> 
+              <sphere radius='.3'></sphere> 
             </shape> 
           </transform>
 
@@ -122,7 +122,7 @@
               <appearance> 
               	<imagetexture  url='https://i.imgur.com/RAgjuVU.png'></imagetexture>
               </appearance> 
-              <sphere radius=2></sphere> 
+              <sphere radius='2'></sphere> 
             </shape> 
           </transform>
 
@@ -132,7 +132,7 @@
               <appearance> 
                 <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
               </appearance> 
-              <sphere radius=2.2></sphere> 
+              <sphere radius='2.2'></sphere> 
             </shape> 
           </transform>
 
@@ -143,7 +143,7 @@
               	<imagetexture  url='https://i.imgur.com/AVw7ykv.jpg'></imagetexture>
               </appearance> 
               <IndexedTriangleSet index="0 1 2 3 4 5" solid="false">
- 				<Coordinate point="-2 1 1, -2 -1 1, 1 0 1, -1 0 1, 2 1 1, 2 -1 1">
+ 				<coordinate point="-2 1 1, -2 -1 1, 1 0 1, -1 0 1, 2 1 1, 2 -1 1"></coordinate>
 			  </IndexedTriangleSet>
             </shape> 
           </transform>
@@ -153,7 +153,7 @@
               <appearance> 
               	<imagetexture  url='https://i.imgur.com/AVw7ykv.jpg'></imagetexture>
               </appearance>
-              <sphere radius=.15></sphere> 
+              <sphere radius='.15'></sphere> 
             </shape> 
           </transform>
 
@@ -174,7 +174,7 @@
 		          <appearance> 
 		            <imagetexture  url='https://i.imgur.com/DAyPFM7.jpg'></imagetexture>
 		          </appearance>  
-		          <sphere radius=.3></sphere>
+		          <sphere radius='.3'></sphere>
 		        </shape>
 		      </transform>
 
@@ -192,7 +192,7 @@
 	              <appearance> 
 	                <imagetexture  url='https://i.imgur.com/Vn7WRp0.jpg'></imagetexture>
 	              </appearance> 
-	              <sphere radius=0.6></sphere> 
+	              <sphere radius='0.6'></sphere> 
 	            </shape> 
 	          </transform>
 	      </transform>
@@ -227,7 +227,7 @@
               <appearance> 
               	<imagetexture  url='https://i.imgur.com/8Cf1BGY.png'></imagetexture>
               </appearance>
-              <sphere radius=2.7></sphere> 
+              <sphere radius='2.7'></sphere> 
             </shape> 
           </transform>
       	</Anchor>
@@ -263,7 +263,7 @@
           <transform translation='0 -9.2 0'> 
             <shape>
               <appearance> 
-		      	<material transparency=.5></material>
+		      	<material transparency='.5'></material>
 		      </appearance> 
               <IndexedFaceSet ccw="true" colorPerVertex="true" convex="true"
 			  creaseAngle="0" solid="false" coordIndex="0 1 2 3">
@@ -283,7 +283,7 @@
           <PointLight color='1 0 0' location='0 8 0' intensity='.8'/>
 
         </scene> 
-      </x3d> 
+      </X3D> 
 
 
   </body> 
