--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				<Shape DEF="Torus_1">
 					<Appearance>
 						<Material DEF="Mat_Tor" diffuseColor="0 0.5 0.5" transparency="0.5">
+						</Material>
 					</Appearance>
 					<Torus innerRadius="0.1" outerRadius="0.5">
 					</Torus>
