--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 			<ROUTE fromNode='ScInt_Tor' fromField='value_changed' 
 				toNode='Mat_Tor' toField='set_transparency'>
 			</ROUTE>
-				
-				</Scene>
+		</scene>
             </x3d>
   </body> 
 </html>
